# project

./: .gitignore  API.ipynb  Kim Yun Seong.py  README.md  config.py  main.py  manage_crops.py  manage_weather.py  pyproject.toml  requirements.txt  tmp.py
datas/: crops.pkl  db.pkl
src/: audio_manager.py  config.py  main.py  manage_crops.py  manage_weather.py  remove_crops.py
